--- a/components/sass/modules/_content.scss
+++ b/components/sass/modules/_content.scss
@@ -1,8 +1,7 @@
 .content {
-  padding-top: 0;
   padding-right: .5em;
-  padding-bottom: 0;
   padding-left: .5em;
+  margin-top: 1em;
 
   
   // CONVENIENCE
